--- a/package.json
+++ b/package.json
@@ -2,26 +2,24 @@
   "name": "IntroHCI",
   "version": "0.0.1",
   "author": "Intro HCI Staff",
+
   "repository": {
     "type": "git",
     "url": "https://github.com/IntroHCI/lab4"
   },
   "license": "MIT",
+
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "depd": "^1.1.2",
-    "express": "^3.21.2",
-    "express3-handlebars": "^0.5.2",
-    "merge": "^1.2.0",
-    "merge-json": "0.1.0-b.3",
+    "express": "3.x",
+    "express3-handlebars": "*",
     "mongodb": "*",
     "mongoose": "*"
   },
   "engines": {
-    "node": "0.10.x"
-  }
+    "node": "8.9.x"
+  }  
 }
