--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^3.21.2",
     "express3-handlebars": "*",
+    "handlebars": "^4.0.11",
     "mongodb": "*",
     "mongoose": "*"
   },
