--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^3.21.2",
     "express3-handlebars": "*",
     "handlebars": "^4.0.11",
+    "jsonfile": "^4.0.0",
     "mongodb": "*",
     "mongoose": "*"
   },
