--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "express": "^3.21.2",
-    "express3-handlebars": "*",
+    "express3-handlebars": "^0.5.2",
     "handlebars": "^4.0.11",
     "jsonfile": "^4.0.0",
     "mongodb": "*",
