--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "handlebars": "^4.0.11",
     "jsonfile": "^4.0.0",
     "mongodb": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "text-to-speech-js": "^1.1.8"
   },
   "engines": {
     "node": "8.9.x"
